library/autodiff/tests/ui/not_a_function.rs
use autodiff::autodiff;

#[autodiff]
struct NotAFunction;

fn main() {}
